[gd_scene load_steps=3 format=3 uid="uid://p8ukl868usun"]

[ext_resource type="Script" uid="uid://b36o0d15jcmf3" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vue75"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -140.0
offset_right = 157.5
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayGame" type="Button" parent="VBoxContainer"]
material = SubResource("CanvasItemMaterial_vue75")
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.823924, 0.823924, 0.823924, 1)
theme_override_colors/font_pressed_color = Color(0.678944, 0.678944, 0.678944, 1)
text = "Play"

[node name="Settings" type="Button" parent="VBoxContainer"]
material = SubResource("CanvasItemMaterial_vue75")
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.823924, 0.823924, 0.823924, 1)
theme_override_colors/font_pressed_color = Color(0.678944, 0.678944, 0.678944, 1)
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
material = SubResource("CanvasItemMaterial_vue75")
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.823924, 0.823924, 0.823924, 1)
theme_override_colors/font_pressed_color = Color(0.678944, 0.678944, 0.678944, 1)
text = "Exit"

[connection signal="pressed" from="VBoxContainer/PlayGame" to="." method="play_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="exit_button_pressed"]
