extends Control


func play_game_button_pressed() -> void:
	print("play game")
	pass # Replace with function body.


func settings_button_pressed() -> void:
	print("settings")
	pass # Replace with function body.


func exit_button_pressed() -> void:
	print("exit")
	pass # Replace with function body.
